# packages/domain/src/openapi.ts
@@ -990,6 +990,10 @@ export const myqslOpenApiSpec = {
           gridsquare: { type: "string", nullable: true },
           name: { type: "string", nullable: true },
           qth: { type: "string", nullable: true },
+          my_rig: { type: "string", nullable: true },
+          my_antenna: { type: "string", nullable: true },
+          my_power_w: { type: "integer", minimum: 0, maximum: 100000, nullable: true },
+          other_power_w: { type: "integer", minimum: 0, maximum: 100000, nullable: true },
           comment: { type: "string", nullable: true },
           adif_extra: { type: "object", additionalProperties: { type: "string" } }
         },
@@ -1013,6 +1017,10 @@ export const myqslOpenApiSpec = {
           gridsquare: { type: "string", nullable: true },
           name: { type: "string", nullable: true },
           qth: { type: "string", nullable: true },
+          my_rig: { type: "string", nullable: true },
+          my_antenna: { type: "string", nullable: true },
+          my_power_w: { type: "integer", minimum: 0, maximum: 100000, nullable: true },
+          other_power_w: { type: "integer", minimum: 0, maximum: 100000, nullable: true },
           comment: { type: "string", nullable: true },
           adif_extra_json: { type: "string" },
           version: { type: "integer" },
